modif du gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-
-.DS_Store
+*.egg-info
 *~
 .*.swp
 .DS_Store
+.gitattributes
+.idea
+.idea/
 .ipynb_checkpoints
 .pixi
-*.egg-info
+/shelf/
+/workspace.xml
+__pycache__
 pixi.lock
 pixi.toml
-.gitattributes
-.idea/
-
