ajout d'élement dans le gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,35 @@
 __pycache__
 pixi.lock
 pixi.toml
+# OS X
+.DS_Store?
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+
+# Windows
+ehthumbs.db
+Thumbs.db
+
+# Vim
+.local.vimrc
+.*.sw[a-z]
+*.un~
+Session.vim
+.netrwhist
+
+# Ruby
+.sass-cache
+.rbenv-vars
+.rvmrc
+.ruby-version
+
+# Ctags
+tags
+tags-ja
+
+# Node
+node_modules
+
