--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 #METTRE LES FICHIERS A IGNORER DANS GIT ICI
+# note de manon : attention risque de push des secret dans le dépot gitlab (forbiden)
+# il faudra trouver une solution plus propre 
+.env
+
 *.egg-info
 *~
 .*.swp
