--- a/docker/DOCKER/docker-compose.yml
+++ b/docker/DOCKER/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.9'
+
 services:
   postgres:
     image: postgres:latest
@@ -8,10 +9,16 @@ services:
       POSTGRES_PASSWORD: DORsupever2025
       POSTGRES_DB: DORdatabase
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: always
 
   pgadmin:
     image: dpage/pgadmin4:latest
@@ -36,4 +43,4 @@ services:
       - ./python_script:/script
 
 volumes:
-  postgres_data:
+  postgres-data:
