création d'un fichier env pour les développeur - commit impossible depuis les postes de dev - ecrasé lors du lancement de pipeline de CICD

--- a/.env
+++ b/.env
@@ -1,4 +1,14 @@
-# variable d'environnement pour le dev
-# ne pas commiter sur le dépot 
+# PostgreSQL Configuration
+POSTGRES_USER=myuser
+POSTGRES_PASSWORD=mypassword
+POSTGRES_DB=mydatabase
+POSTGRES_PORT=5432
 
+# pgAdmin Configuration
+PGADMIN_DEFAULT_EMAIL=admin@example.com
+PGADMIN_DEFAULT_PASSWORD=adminpassword
+PGADMIN_PORT=5050
 
+# Python Application Configuration
+PYTHON_APP_PORT=8000
+PYTHON_APP_ENV=development
