fix fichier .env

--- a/.env
+++ b/.env
@@ -1,14 +1,16 @@
 # PostgreSQL Configuration
-POSTGRES_USER=myuser
-POSTGRES_PASSWORD=mypassword
-POSTGRES_DB=mydatabase
+POSTGRES_USER=userDor
+POSTGRES_PASSWORD=Azerty01+
+POSTGRES_DB=dorDB
 POSTGRES_PORT=5432
+POSTGRES_HOST=db
 
 # pgAdmin Configuration
-PGADMIN_DEFAULT_EMAIL=admin@example.com
-PGADMIN_DEFAULT_PASSWORD=adminpassword
+PGADMIN_DEFAULT_EMAIL=admin@student-cs.fr
+PGADMIN_DEFAULT_PASSWORD=Azerty01+
 PGADMIN_PORT=5050
+PGADMIN_HOST=pgadmin
 
 # Python Application Configuration
 PYTHON_APP_PORT=8000
-PYTHON_APP_ENV=development
+PYTHON_APP_HOST=app
