--- a/docker/DOCKER/python_script/requirements.txt
+++ b/docker/DOCKER/python_script/requirements.txt
@@ -9,3 +9,11 @@ requests==2.32.3
 setuptools==75.1.0
 urllib3==2.2.3
 wheel==0.44.0
+annotated-types==0.6.0
+anyio==4.6.2
+fastapi==0.112.2
+pydantic==2.10.3
+pydantic_core==2.27.1
+sniffio==1.3.0
+starlette==0.38.2
+typing_extensions==4.12.2
