modification de l'appli

--- a/docker/Docker version rami/python_script/Dockerfile
+++ b/docker/Docker version rami/python_script/Dockerfile
@@ -4,7 +4,7 @@ FROM python:3.11-slim
 RUN apt update && apt install -y libpq-dev gcc
 
 # Installe psycopg2 et requests pour interagir avec PostgreSQL et GitLab
-RUN pip install psycopg2 requests
+RUN pip install psycopg2 requests pandas fastparquet
 
 WORKDIR /script
 
@@ -15,4 +15,3 @@ COPY entrypoint.sh .
 
 # Définit le point d'entrée
 ENTRYPOINT ["./entrypoint.sh"]
-
