--- a/docker/Docker version rami/docker-compose.yml
+++ b/docker/Docker version rami/docker-compose.yml
@@ -4,32 +4,25 @@ services:
   postgres:
     image: postgres:latest
     container_name: my_postgres
-    environment:
-      POSTGRES_USER: supever
-      POSTGRES_PASSWORD: DORsupever2025
-      POSTGRES_DB: DORdatabase
+    env_file:
+      - ./environment/.env
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: always
 
   pgadmin:
     image: dpage/pgadmin4:latest
     container_name: my_pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: guillaume.ramirez@student-cs.fr
-      PGADMIN_DEFAULT_PASSWORD: DORsupever2025
+    env_file:
+      - ./environment/.env
     ports:
       - "5050:80"
     depends_on:
       - postgres
+    volumes:
+      - ./environment/servers.json:/pgadmin4/servers.json
 
   python_app:
     build:
