modif du docker compose pour ajouter un conteneur grafana

--- a/docker/Docker version antoine/docker-compose.yml
+++ b/docker/Docker version antoine/docker-compose.yml
@@ -32,5 +32,19 @@ services:
       - ./python_script:/script
       - ../../data:/data
 
+  grafana:
+    image: grafana/grafana:latest
+    container_name: my_grafana
+    ports:
+      - "3000:3000"
+    env_file:
+      - ./environment/.env
+    volumes:
+      - grafana-data:/var/lib/grafana
+    depends_on:
+      - postgres
+
+
 volumes:
   postgres-data:
+  grafana-data:
