--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
-annotated-types==0.6.0
-anyio==4.6.2
-fastapi==0.112.2
-idna==3.7
-pip==24.2
-pydantic==2.10.3
-pydantic_core==2.27.1
-setuptools==75.1.0
-sniffio==1.3.0
-starlette==0.38.2
-typing_extensions==4.12.2
-wheel==0.44.0
-psycopg2
-setuptools==75.1.0
+Bottleneck==1.4.2
+Brotli==1.0.9
+contourpy==1.3.1
+cycler==0.11.0
+fonttools==4.55.3
+kiwisolver==1.4.8
+matplotlib==3.10.0
+numexpr==2.10.1
+numpy==2.0.1
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+pip==25.0
+psycopg2==2.9.9
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+seaborn==0.13.2
+setuptools==75.8.0
+six==1.16.0
+tornado==6.4.2
+tzdata==2023.3
+unicodedata2==15.1.0
+wheel==0.45.1
