--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
-# PostgreSQL Configuration
-POSTGRES_USER=userDor
-POSTGRES_PASSWORD=Azerty01+
-POSTGRES_DB=dorDB
-POSTGRES_PORT=5432
-POSTGRES_HOST=db
+# configuration for developper
+# this file is re write with the CICD pipeline
 
-# pgAdmin Configuration
-PGADMIN_DEFAULT_EMAIL=admin@student-cs.fr
+# PostgreSQL Configuration
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_DB=postgres
+POSTGRES_USER=supever
+POSTGRES_PASSWORD=Azerty01+
+
+PGADMIN_DEFAULT_EMAIL=admin@example.com
 PGADMIN_DEFAULT_PASSWORD=Azerty01+
 PGADMIN_PORT=5050
 PGADMIN_HOST=pgadmin
@@ -14,3 +16,7 @@ PGADMIN_HOST=pgadmin
 # Python Application Configuration
 PYTHON_APP_PORT=8000
 PYTHON_APP_HOST=app
+
+# grafana
+GF_SECURITY_ADMIN_USER=admin
+GF_SECURITY_ADMIN_PASSWORD=admin
