--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 Bottleneck==1.4.2
 Brotli==1.0.9
 contourpy==1.3.1
+cramjam==2.7.0
 cycler==0.11.0
+fastparquet==2024.2.0
 fonttools==4.55.3
+fsspec==2024.12.0
+joblib==1.4.2
 kiwisolver==1.4.8
 matplotlib==3.10.0
 numexpr==2.10.1
-numpy==2.0.1
+numpy==1.26.4
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
@@ -15,9 +19,12 @@ psycopg2==2.9.9
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
+scikit-learn==1.6.1
+scipy==1.15.1
 seaborn==0.13.2
 setuptools==75.8.0
 six==1.16.0
+threadpoolctl==3.5.0
 tornado==6.4.2
 tzdata==2023.3
 unicodedata2==15.1.0
