features - refactor du code python - debut de la modularisation du code - suppression des secret dans le code python - reorg des repertoires - suppression du script.sh

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       postgres:
           condition: service_healthy
     volumes:
-      - ./python/import:/script
+      - ./python/init:/script
       - ./data:/data
 
   grafana:
