--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,22 +4,37 @@ stages:          # List of stages for jobs, and their order of execution
   - integration
   - deploy
 
-lint-test-job:   # This job also runs in the test stage.
-  stage: test    # It can run at the same time as unit-test-job (in parallel).
+.python_before_scripts:
+  before_script:
+    - pip install -r requirements.txt
+    - pip install ruff pytest pytest-cov
+
+pylint:
+  image: python:3.12.8 #
+  stage: test
   tags:
-    - "shell"
+    - "docker"
+  extends: .python_before_scripts
   script:
-    - echo "Linting code... This will take about 10 seconds."
-    - sleep 10
-    - echo "No lint issues found."
-    - 
+    - echo "phase de lint"
+#    - black --check .
+#    - black --check . > ./log_cicd_linter.txt
+#    - isort . --check-only
+#    - flake8 .
+    - ruff check
+  allow_failure: true
+
 
 unit-test:   # This job runs in the test stage.
+  image: python:3.12.8 #
   stage: test    # It only starts when the job in the build stage completes successfully.
   tags:
-    - "shell"
+    - "docker"
+  extends: .python_before_scripts
   script:
-    - echo "Running unit tests... This will take about 60 seconds."
-    - sleep 60
-    - echo "Code coverage is 90%"
+    - echo "tests unitaires"
+    - pytest --cov=app
+    - pytest
+  dependencies:
+    - pylint
 
