--- a/ruff.toml
+++ b/ruff.toml
@@ -10,7 +10,7 @@ exclude = [
     ".git-rewrite",
     ".hg",
     ".ipynb_checkpoints",
-    ".ipynb",
+    "*.ipynb",
     ".mypy_cache",
     ".nox",
     ".pants.d",
@@ -37,7 +37,7 @@ line-length = 88
 indent-width = 4
 
 # Assume Python 3.8
-target-version = "py310"
+target-version = "py312"
 
 [lint]
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
