--- a/docker/Docker version antoine/docker-compose.yml
+++ b/docker/Docker version antoine/docker-compose.yml
@@ -1,4 +1,6 @@
 services:
+
+  # PostgreSQL Database
   postgres:
     image: postgres:17.2
     container_name: my_postgres
@@ -10,6 +12,7 @@ services:
     ports:
       - "5432:5432"
 
+  # pgAdmin for PostgreSQL management
   pgadmin:
     image: dpage/pgadmin4:8.14.0
     container_name: my_pgadmin
@@ -22,16 +25,55 @@ services:
     volumes:
       - ./environment/servers.json:/pgadmin4/servers.json
 
-  python_app:
+  # Kafka Zookeeper
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: my_zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+
+  # Kafka Broker
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    container_name: my_kafka
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    ports:
+      - "9092:9092"
+    depends_on:
+      - zookeeper
+
+  # Python Producer
+  producer:
     build:
       context: ./python_script
-    container_name: my_python_script
+    container_name: my_python_producer
     depends_on:
+      - kafka
       - postgres
     volumes:
-      - ./python_script:/script
+      - ./python_script:/app
+      - ./kafka:/app/kafka
       - ../../data:/data
+    entrypoint: ["/bin/bash", "/app/kafka/producer/producer_entrypoint.sh"]
 
+  # Python Consumer (for consuming Kafka messages and inserting into PostgreSQL)
+  consumer:
+    build:
+      context: ./python_script
+    container_name: my_python_consumer
+    depends_on:
+      - kafka
+      - postgres
+    volumes:
+      - ./python_script:/app
+      - ./kafka:/app/kafka
+    entrypoint: ["/bin/bash", "/app/kafka/consumer/consumer_entrypoint.sh"]
+
+  # Grafana for monitoring
   grafana:
     image: grafana/grafana:latest
     container_name: my_grafana
