--- a/docker/Docker version antoine/python_script/Dockerfile
+++ b/docker/Docker version antoine/python_script/Dockerfile
@@ -4,14 +4,4 @@ FROM python:3.11-slim
 RUN apt update && apt install -y libpq-dev gcc
 
 # Installe psycopg2 et requests pour interagir avec PostgreSQL et GitLab
-RUN pip install psycopg2 requests pandas fastparquet
-
-WORKDIR /script
-
-# Copie le script Python
-COPY import_csv.py .
-COPY wait_for_postgres.py .
-COPY entrypoint.sh .
-
-# Définit le point d'entrée
-ENTRYPOINT ["./entrypoint.sh"]
+RUN pip install psycopg2 kafka-python
