--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,26 @@
 Bottleneck==1.4.2
 Brotli==1.0.9
-contourpy==1.3.1
+certifi==2025.1.31
+charset-normalizer==3.3.2
 cramjam==2.7.0
-cycler==0.11.0
 fastparquet==2024.2.0
-fonttools==4.55.3
 fsspec==2024.12.0
-joblib==1.4.2
-kiwisolver==1.4.8
-matplotlib==3.10.0
+idna==3.7
 numexpr==2.10.1
 numpy==1.26.4
 packaging==24.2
 pandas==2.2.3
-pillow==11.1.0
 pip==25.0
+plotly==5.24.1
 psycopg2==2.9.9
-pyparsing==3.2.0
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
-scikit-learn==1.6.1
-scipy==1.15.1
-seaborn==0.13.2
+requests==2.32.3
+ruff==0.9.6
 setuptools==75.8.0
 six==1.16.0
-threadpoolctl==3.5.0
-tornado==6.4.2
+tenacity==9.0.0
 tzdata==2023.3
-unicodedata2==15.1.0
+urllib3==2.3.0
 wheel==0.45.1
