feature notebook to script - decoupage des fichiers

--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=postgres
-POSTGRES_USER=supever
-POSTGRES_PASSWORD=Azerty01+
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin
 
-PGADMIN_DEFAULT_EMAIL=admin@example.com
-PGADMIN_DEFAULT_PASSWORD=Azerty01+
+PGADMIN_DEFAULT_EMAIL=admin
+PGADMIN_DEFAULT_PASSWORD=admin
 PGADMIN_PORT=5050
 PGADMIN_HOST=pgadmin
 
