--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ POSTGRES_DB=postgres
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 
-PGADMIN_DEFAULT_EMAIL=admin
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=admin
 PGADMIN_PORT=5050
 PGADMIN_HOST=pgadmin
