essaie d'automatiser la conf de grafana

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,8 @@ services:
       - .env
     volumes:
       - grafana-data:/var/lib/grafana
+      - ./conf/grafana/provisioning:/etc/grafana/provisioning
+      - ./conf/grafana/import:/import
     depends_on:
       postgres:
           condition: service_healthy
