--- a/conf/grafana/provisioning/datasources/datasource.yaml
+++ b/conf/grafana/provisioning/datasources/datasource.yaml
@@ -1,16 +1,19 @@
 apiVersion: 1
 
 datasources:
-  - name: postgres
-    type: PostgreSQL
-    access: direct
-    tlsSkipVerify : true
-    uid :
+  - name: grafana-postgresql-datasource
+    type: postgres
     url: postgres:5432
-    isDefault: true
-    database : postgres
-    user : admin
-    password : admin
+    user: admin
+    secureJsonData:
+      password: 'admin'
+    uid: "dedjfow6t58n4e"
     jsonData:
-      sslmode: disable
-
+      database: postgres
+      sslmode: 'disable' # disable/require/verify-ca/verify-full
+      maxOpenConns: 100
+      maxIdleConns: 100
+      maxIdleConnsAuto: true
+      connMaxLifetime: 14400
+      postgresVersion: 150 # 903=9.3, 904=9.4, 905=9.5, 906=9.6, 1000=10
+      timescaledb: false
