--- a/.env
+++ b/.env
@@ -8,6 +8,9 @@ POSTGRES_DB=postgres
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 
+#clé FERNET
+AIRFLOW_FERNET_KEY=sbso5lEaE6Da8V-WwBzzGj6xqg2EeYbsnulPxjBg6sw=
+
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=admin
 PGADMIN_PORT=5050
