--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # PostgreSQL Configuration
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-POSTGRES_DB=postgres
+POSTGRES_DB=postgres #base par défaut
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 
