ajout du dag airflow de création du dataset d'analyse  à l'appli principale

--- a/.env
+++ b/.env
@@ -20,3 +20,6 @@ PYTHON_APP_HOST=app
 # grafana
 GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=admin
+
+#clé FERNET
+AIRFLOW_FERNET_KEY=sbso5lEaE6Da8V-WwBzzGj6xqg2EeYbsnulPxjBg6sw=
