--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,31 @@
 
-
 kafka-python==2.0.3
 pyarrow==19.0.0
 psycopg2==2.9.9
+typing_extensions==4.12.2
+tzdata==2023.3
+wheel==0.45.1
+Bottleneck==1.4.2
+confluent-kafka==2.8.0
+cramjam==2.7.0
+fastparquet==2024.2.0
+fsspec==2024.12.0
+greenlet==3.1.1
+kafka-python==2.0.3
+lxml==5.3.0
+numexpr==2.10.1
+numpy==1.26.4
+packaging==24.2
+pandas==2.2.3
+pip==25.0
+plotly==5.24.1
+psycopg2==2.9.9
+python-dateutil==2.9.0.post0
+pytz==2024.1
+setuptools==72.1.0
+six==1.16.0
+SQLAlchemy==2.0.37
+tenacity==9.0.0
+typing_extensions==4.12.2
+tzdata==2023.3
+wheel==0.45.1
