--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -15,7 +15,7 @@ ENV PYTHONUNBUFFERED=1
 RUN apt update && apt upgrade -y && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-COPY ./requirements.txt /code/requirements.txt
+COPY ./docker/python/requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 WORKDIR /code
