--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,172 @@
-
-kafka-python==2.0.3
-pyarrow==19.0.0
-psycopg2==2.9.9
-typing_extensions==4.12.2
-tzdata==2023.3
-wheel==0.45.1
+alembic==1.13.3
+anyio==4.6.2
+apache-airflow==2.10.5
+apache-airflow-providers-common-compat==1.5.0
+apache-airflow-providers-common-io==1.5.0
+apache-airflow-providers-common-sql==1.2.0
+apache-airflow-providers-fab==1.5.3
+apache-airflow-providers-ftp==3.1.0
+apache-airflow-providers-http==4.0.0
+apache-airflow-providers-imap==3.0.0
+apache-airflow-providers-smtp==2.0.0
+apache-airflow-providers-sqlite==3.0.0
+apispec==6.6.0
+argcomplete==1.12.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.8.1
+attrs==24.3.0
+babel==2.16.0
+bcrypt==3.2.0
+blinker==1.9.0
 Bottleneck==1.4.2
-confluent-kafka==2.8.0
+Brotli==1.0.9
+cachelib==0.9.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.3.2
+click==8.1.7
+clickclick==20.10.2
+colorama==0.4.6
+colorlog==6.9.0
+colour==0.1.4
+ConfigUpdater==3.1.1
+confluent-kafka==2.6.1
+connexion==2.14.2
+contourpy==1.3.1
 cramjam==2.7.0
+cron_descriptor==1.4.5
+croniter==3.0.3
+cryptography==44.0.1
+cycler==0.11.0
+Deprecated==1.2.13
+dill==0.3.8
+dnspython==2.4.2
+docutils==0.18.1
+email-validator==1.2.1
 fastparquet==2024.2.0
+Flask==2.2.5
+Flask-AppBuilder==4.5.3
+Flask-Babel==2.0.0
+Flask-Caching==2.0.1
+Flask-JWT-Extended==4.4.4
+Flask-Limiter==3.10.1
+Flask-Login==0.6.3
+Flask-Session==0.4.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.2.1
+fonttools==4.55.3
 fsspec==2024.12.0
+furl==2.1.2
+google-re2==1.1.20240702
+googleapis-common-protos==1.63.2
 greenlet==3.1.1
-kafka-python==2.0.3
+grpcio==1.60.1
+gunicorn==22.0.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.27.0
+idna==3.7
+importlib-metadata==7.0.1
+infinity==1.5
+inflection==0.5.1
+intervals==0.9.2
+itsdangerous==2.2.0
+Jinja2==3.1.5
+jmespath==1.0.1
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2023.7.1
+kafka-python==2.0.6
+kiwisolver==1.4.8
+lazy-object-proxy==1.10.0
+limits==4.0.1
+linkify-it-py==2.0.0
+lockfile==0.12.2
 lxml==5.3.0
+Mako==1.2.3
+markdown-it-py==2.2.0
+MarkupSafe==3.0.2
+marshmallow==3.19.0
+marshmallow-oneofschema==3.0.1
+marshmallow-sqlalchemy==0.26.1
+matplotlib==3.10.0
+mdit-py-plugins==0.3.0
+mdurl==0.1.0
+methodtools==0.4.7
 numexpr==2.10.1
 numpy==1.26.4
+opentelemetry-api==1.26.0
+opentelemetry-exporter-otlp==1.26.0
+opentelemetry-exporter-otlp-proto-common==1.26.0
+opentelemetry-exporter-otlp-proto-grpc==1.26.0
+opentelemetry-exporter-otlp-proto-http==1.26.0
+opentelemetry-proto==1.26.0
+opentelemetry-sdk==1.26.0
+opentelemetry-semantic-conventions==0.47b0
+ordered-set==4.1.0
+orderedmultidict==1.0.1
 packaging==24.2
-pandas==2.2.3
+pandas==2.1.4
+passlib==1.7.4
+pathspec==0.10.3
+pendulum==3.0.0
+phonenumbers==8.13.49
+pillow==11.1.0
 pip==25.0
 plotly==5.24.1
+pluggy==1.5.0
+prison==0.2.1
+protobuf==4.25.1
+psutil==5.9.0
 psycopg2==2.9.9
+pyarrow==11.0.0
+pycparser==2.21
+Pygments==2.15.1
+PyJWT==2.10.1
+pyparsing==3.2.0
+PySocks==1.7.1
+python-daemon==3.0.1
 python-dateutil==2.9.0.post0
+python-nvd3==0.15.0
+python-slugify==5.0.2
 pytz==2024.1
+PyYAML==6.0.2
+referencing==0.30.2
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rich==13.9.4
+rich-argparse==1.7.0
+rpds-py==0.22.3
+scikit-learn==1.6.1
+scipy==1.15.1
+seaborn==0.13.2
+setproctitle==1.3.5
 setuptools==72.1.0
 six==1.16.0
-SQLAlchemy==2.0.37
+sniffio==1.3.0
+SQLAlchemy==1.4.54
+SQLAlchemy-JSONField==1.0.1.post0
+SQLAlchemy-Utils==0.41.2
+sqlparse==0.5.2
+tabulate==0.9.0
 tenacity==9.0.0
+termcolor==2.1.0
+text-unidecode==1.3
+threadpoolctl==3.5.0
+time-machine==2.16.0
 typing_extensions==4.12.2
 tzdata==2023.3
+uc-micro-py==1.0.1
+unicodedata2==15.1.0
+Unidecode==1.3.8
+universal_pathlib==0.2.6
+urllib3==2.3.0
+Werkzeug==2.2.3
 wheel==0.45.1
+wirerope==1.0.0
+wrapt==1.17.0
+WTForms==2.3.3
+zipp==3.21.0
