--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -177,6 +177,7 @@ services:
       context: .
       dockerfile: docker/airflow/Dockerfile
     container_name: dor_airflow
+    command: ["/bin/bash", "-c", "export START_DATE=$(date -u '+%Y-%m-%dT%H:00:00') && airflow standalone"]
     env_file:
       - .env
     depends_on:
@@ -187,6 +188,9 @@ services:
       - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/airflow
       - AIRFLOW__CORE__FERNET_KEY=${AIRFLOW_FERNET_KEY}
       - AIRFLOW__CORE__LOAD_EXAMPLES=False
+      - AIRFLOW__CORE__DEFAULT_TIMEZONE=Europe/Paris
+      - TZ=Europe/Paris
+      - START_DATE=${START_DATE:-}
     volumes:
         - ./python/dags:/opt/airflow/dags
         - logs_data:/opt/airflow/logs
