- nettoyage du code mort

--- a/.env
+++ b/.env
@@ -23,3 +23,12 @@ GF_SECURITY_ADMIN_PASSWORD=admin
 
 #clé FERNET
 AIRFLOW_FERNET_KEY=sbso5lEaE6Da8V-WwBzzGj6xqg2EeYbsnulPxjBg6sw=
+
+# KAFKA
+KAFKA_BROKER_ID=1
+KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+KAFKA_MESSAGE_MAX_BYTES=209715200
+KAFKA_REPLICA_FETCH_MAX_BYTES=209715200
+KAFKA_FETCH_MESSAGE_MAX_BYTES=209715200
