--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ GF_SECURITY_ADMIN_PASSWORD=admin
 AIRFLOW_FERNET_KEY=sbso5lEaE6Da8V-WwBzzGj6xqg2EeYbsnulPxjBg6sw=
 
 # KAFKA
-KAFKA_PORT=9092
+KAFKA_PORTNUM=9092
 KAFKA_HOSTNAME=kafka
 KAFKA_BROKER_ID=1
 KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
