- nettoyage du code mort

--- a/.env
+++ b/.env
@@ -22,7 +22,13 @@ GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=admin
 
 #clé FERNET
-AIRFLOW_FERNET_KEY=sbso5lEaE6Da8V-WwBzzGj6xqg2EeYbsnulPxjBg6sw=
+AIRFLOW_FERNET_KEY="sbso5lEaE6Da8V-WwBzzGj6xqg2EeYbsnulPxjBg6sw="
+AIRFLOW__CORE__EXECUTOR=LocalExecutor
+AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/airflow
+AIRFLOW__CORE__FERNET_KEY="sbso5lEaE6Da8V-WwBzzGj6xqg2EeYbsnulPxjBg6sw="
+AIRFLOW__CORE__LOAD_EXAMPLES=False
+AIRFLOW__CORE__DEFAULT_TIMEZONE=Europe/Paris
+
 
 # KAFKA
 KAFKA_PORTNUM=9092
@@ -34,3 +40,6 @@ KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
 KAFKA_MESSAGE_MAX_BYTES=209715200
 KAFKA_REPLICA_FETCH_MAX_BYTES=209715200
 KAFKA_FETCH_MESSAGE_MAX_BYTES=209715200
+
+# ZOOKEEPER
+ZOOKEEPER_CLIENT_PORT=2181
