--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,8 +62,8 @@ services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     container_name: my_zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
+    env_file:
+      - .env
     networks:
       dor_network:
         aliases:
