--- a/docker/kafka/Dockerfile
+++ b/docker/kafka/Dockerfile
@@ -20,17 +20,12 @@ RUN apt update && \
     rm -rf /var/lib/apt/lists/*
 
 # Installe psycopg2 et requests pour interagir avec PostgreSQL et GitLab
-RUN pip install psycopg2 kafka-python
+RUN pip install psycopg2-binary kafka-python
 
 # on construit une image docker plus legere à partir du build
 FROM python:3.9-slim  AS runner
 WORKDIR /app
 COPY --from=builder /usr/local/lib/python3.9/site-packages /usr/local/lib/python3.9/site-packages
-
-# on est quand meme obligé de faire un update à cause de psycopg2
-RUN apt-get update \
-    && apt-get -y install libpq-dev gcc \
-    && pip install psycopg2
 
 # variables d'environnements
 ENV PYTHONDONTWRITEBYTECODE=1
