--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -21,17 +21,13 @@ RUN apt update && \
 
 # installation des requirements
 COPY ./docker/python/requirements.txt .
-RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
+RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt \
+    && pip install psycopg2-binary
 
 # on construit une image docker plus legere à partir du build
 FROM python:3.12.8-slim  AS runner
 WORKDIR /app
 COPY --from=builder /usr/local/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
-
-# on est quand meme obligé de faire un update à cause de psycopg2
-RUN apt-get update \
-    && apt-get -y install libpq-dev gcc \
-    && pip install psycopg2
 
 # variables d'environnements
 ENV PYTHONDONTWRITEBYTECODE=1
