basculement des variables globales vers le .env

--- a/.env
+++ b/.env
@@ -22,9 +22,9 @@ GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=admin
 
 #clé FERNET
-AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://admin:admin@$postgres:5432/airflow
 AIRFLOW_FERNET_KEY=sbso5lEaE6Da8V-WwBzzGj6xqg2EeYbsnulPxjBg6sw=
 AIRFLOW__CORE__EXECUTOR=LocalExecutor
+AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/airflow
 AIRFLOW__CORE__FERNET_KEY=sbso5lEaE6Da8V-WwBzzGj6xqg2EeYbsnulPxjBg6sw=
 AIRFLOW__CORE__LOAD_EXAMPLES=False
 AIRFLOW__CORE__DEFAULT_TIMEZONE=Europe/Paris
@@ -42,3 +42,5 @@ KAFKA_FETCH_MESSAGE_MAX_BYTES=209715200
 
 # ZOOKEEPER
 ZOOKEEPER_CLIENT_PORT=2181
+ZK_HOSTS="zookeeper:2181"
+APPLICATION_SECRET="randomsecret"
